<resources>
    <string name="app_name">Gas Connection App</string>
    <string name="log_in">Login</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_details">Don\'t worry! It happens. Please enter your registered email address associated with your account.</string>
    <string name="or">OR</string>
    <string name="create_account">Create Account</string>
    <string name="todo" />
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="register">Register</string>
    <string name="registeration">Registration</string>
    <string name="apply_for_gas_connection">Apply for Gas Connection</string>
    <string name="name_of_applicant">Name of Applicant</string>
    <string name="s_o_d_o_w_o">S/O/ D/O/ W/O</string>
    <string name="cnic_no">CNIC No.</string>
    <string name="cnic_issue_date">CNIC Issue Date</string>
    <string name="telephone_no_res">Telephone No. (Res)</string>
    <string name="telephone_no_off">Telephone No. (Off)</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address_where_gas_connection_is_required">Address (Where Gas Connection is Required)</string>
    <string name="address_line">Address Line</string>
    <string name="nearest_place_land_mark">Nearest Place(Land Mark)</string>
    <string name="nearest_consumer_no">Nearest Consumer No.</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="constituency_details">Constituency Details</string>
    <string name="na">NA #.</string>
    <string name="pp">PP #.</string>
    <string name="natural_gas_required_for">Natural Gas Required For</string>
    <string name="kitchen">Kitchen</string>
    <string name="water_heating">Water Heating</string>
    <string name="space_heating">Space Heating</string>
    <string name="all_of_the_three">All of the Three</string>
    <string name="in_case_the_premises_is_not_owned_by_the_applicant">In case the Premises is not Owned by the Applicant</string>
    <string name="name_of_owner">Name of Owner</string>
    <string name="select_cnic_property_ownership_documents_to_upload"><![CDATA[Select CNIC & Property Ownership documents to Upload]]></string>
    <string name="cnic_front">CNIC (Front)</string>
    <string name="cnic_back">CNIC (Back)</string>
    <string name="ownership_document">Ownership Document</string>
    <string name="name">Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="cnic">CNIC*</string>
    <string name="cnic_issue_date_req">CNIC Issue Date*</string>
    <string name="new_gas_connection">New Gas Connection</string>
    <string name="property_document">Property Document</string>
    <string name="dashboard">Dashboard</string>
    <string name="sngpl_gas_pipeline_network_exists_in_front_of_my_premises_which_is_fully_constructed_and_occupied">SNGPL gas pipeline network exists in front of my premises, which is fully constructed and occupied.</string>
    <string name="i_fully_understand_that_if_the_information_given_above_is_found_contrary_to_the_facts_sngpl_is_fully_authorized_to_treat_my_application_as_invalid_for_any_further_consideration">I fully understand that if the information given above is found contrary to the facts, SNGPL is fully authorized to treat my application as invalid for any further consideration.</string>
    <string name="type_of_premises_house_flat">Type of Premises (House/Flat)</string>
    <string name="abc_123_gmail_com">abc.123@gmail.com</string>
    <string name="remember_password">Remember Password?</string>
    <string name="submit">Submit</string>
    <string name="update_profile">Update Profile</string>
    <string name="applicant_name">Applicant Name: </string>
    <string name="email_id">Email ID: </string>
    <string name="mobile_no_">Mobile No: </string>
    <string name="consumer_no">Consumer No: </string>
    <string name="province_">Province: </string>
    <string name="city_">City: </string>
    <string name="address_">Address: </string>
</resources>