<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:gravity="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/EditTextStyle"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:ems="10"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/EditTextStyle"
            android:layout_marginTop="5dp"
            android:autofillHints="textPassword"
            android:inputType="textPassword"
            android:ems="10"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="11sp" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/FilledButtonStyle"
            android:layout_marginTop="25dp"
            android:text="@string/log_in" />

        <LinearLayout
            android:id="@+id/orView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/border_color"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/border_color"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            style="@style/FilledButtonStyle"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/create_account" />

    </LinearLayout>

</ScrollView>