<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <EditText
            android:id="@+id/edtUserName"
            style="@style/EditTextStyle"
            android:layout_marginTop="5dp"
            android:autofillHints="textPersonName"
            android:inputType="textPersonName|textCapWords"
            android:ems="10"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <EditText
            android:id="@+id/edtMobileNo"
            style="@style/EditTextStyle"
            android:layout_marginTop="5dp"
            android:autofillHints="phone"
            android:inputType="phone"
            android:ems="10"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/EditTextStyle"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:enabled="false"
            android:ems="10"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cnic_no"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <EditText
            android:id="@+id/edtCNIC"
            style="@style/EditTextStyle"
            android:layout_marginTop="5dp"
            android:autofillHints="number"
            android:inputType="number"
            android:ems="10"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cnic_issue_date"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <EditText
            android:id="@+id/edtCNICIssueDate"
            style="@style/EditTextStyle"
            android:layout_marginTop="5dp"
            android:autofillHints="date"
            android:inputType="date"
            android:ems="10"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btnUpdateProfile"
            style="@style/FilledButtonStyle"
            android:layout_marginTop="25dp"
            android:text="@string/update_profile" />

    </LinearLayout>

</ScrollView>